# cross_platform_rust

./: cargo-config.toml
NDK/arm/lib/python2.7/config/: Makefile
NDK/arm/lib/python2.7/lib2to3/: Grammar2.7.5.final.0.pickle
NDK/arm/share/gdbserver/: gdbserver
NDK/arm64/lib/python2.7/: _sysconfigdata.py
NDK/arm64/share/gdbserver/: gdbserver
NDK/x86/include/: libyasm-stdint.h
NDK/x86/share/gdbserver/: gdbserver
android/app/: build.gradle
android/app/src/main/java/com/example/greetings/: MainActivity.kt  RustGreetings.kt
android/gradle/wrapper/: gradle-wrapper.properties
cargo/: Cargo.toml
cargo/src/: lib.rs
